--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -11,7 +11,8 @@
     "-  Min Max Scaling\n",
     "-  Normalization\n",
     "-  Binarization\n",
-    "-  One hot encoding"
+    "-  One hot encoding\n",
+    "-  Label Encoding"
    ]
   },
   {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +239,7 @@
        "array([[ 1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,6 +257,61 @@
     "enc = preprocessing.OneHotEncoder()\n",
     "enc.fit([[0, 0, 3], [1, 1, 0], [0, 2, 1], [1, 0, 2]])\n",
     "enc.transform([[0, 1, 3]]).toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Label Encoding:\n",
+    "\n",
+    "Which encodes labels with values between 0 and n_classes-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Encoded labels:\n",
+      "[0 1 8]\n",
+      "\n",
+      "Decoded Labels:\n",
+      "['banana foster' 'butterscoth' 'venilla']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Icecream labels\n",
+    "input_classes = ['dark chocolate',\n",
+    "                 'butterscoth',\n",
+    "                 'strawberry',\n",
+    "                 'banana foster',\n",
+    "                 'cookies and cream',\n",
+    "                 'cotton candy',\n",
+    "                 'pistachio',\n",
+    "                 'venilla',\n",
+    "                 'mango']\n",
+    "\n",
+    "# Label Encoder\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "label_encoder.fit(input_classes)\n",
+    "\n",
+    "# Transform a set of classes\n",
+    "labels = ['banana foster', 'butterscoth', 'venilla']\n",
+    "encoded_labels = label_encoder.transform(labels)\n",
+    "print('\\nEncoded labels:')\n",
+    "print(encoded_labels)\n",
+    "\n",
+    "# Inverse Transform\n",
+    "decoded_labels = label_encoder.inverse_transform(encoded_labels)\n",
+    "print('\\nDecoded Labels:')\n",
+    "print(decoded_labels)"
    ]
   }
  ],
